<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"

        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name_title"
            android:padding="10dp"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:textSize="25dp"
            android:textColor="@color/colorText"
            android:layout_marginTop="20dp"/>

    <Button
            android:id="@+id/new_process"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_process"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"/>
    <Button
            android:id="@+id/archive_process"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history_process"
            android:padding="10dp"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"/>
    <Button
            android:id="@+id/app_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_description"
            android:padding="10dp"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"/>
    <Button
            android:id="@+id/options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/options"
            android:padding="10dp"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"/>
    <Button
            android:id="@+id/money_support"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/money_support"
            android:padding="10dp"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"/>
</LinearLayout>