<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="match_parent"
        android:layout_width="match_parent">
    <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">
                <TextView
                        android:text="@string/name_exp"
                        android:textSize="16sp"
                        android:textColor="@color/colorText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minLines="2"
                        android:gravity="center_horizontal"/>
                <TextView
                        android:id="@+id/end_name_exp_filled"
                        android:textSize="16sp"
                        android:textStyle="bold|italic"
                        android:textColor="@color/colorForestGreen"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:layout_marginEnd="5dp"
                        android:gravity="center_horizontal"/>
            </LinearLayout>

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">
                <TextView
                        android:text="@string/time_exp"
                        android:textSize="16sp"
                        android:textColor="@color/colorText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minLines="2"
                        android:gravity="center_horizontal"/>
                <TextView
                        android:id="@+id/end_time_exp_filled"
                        android:textSize="16sp"
                        android:textStyle="bold|italic"
                        android:textColor="@color/colorForestGreen"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:layout_marginStart="5dp"
                        android:gravity="center_horizontal"/>

            </LinearLayout>


        </LinearLayout>

        <TextView
                android:text="@string/second_test_modify_exp"
                android:textSize="16sp"
                android:textColor="@color/colorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"/>
        <TextView
                android:id="@+id/end_modify_exp"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                android:textColor="@color/colorForestGreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginStart="5dp"/>

        <TextView
                android:text="@string/description_new_exp"
                android:textSize="16sp"
                android:textColor="@color/colorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"/>
        <TextView
                android:id="@+id/end_description_new_exp"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                android:textColor="@color/colorForestGreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginStart="5dp"/>

        <Button
                android:id="@+id/buton_back"
                android:textSize="16sp"
                android:text="@string/buton_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"/>

        <Button
                android:id="@+id/buton_end"
                android:textSize="16sp"
                android:text="@string/buton_end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"/>


    </LinearLayout>
</ScrollView>