<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="match_parent"
        android:layout_width="match_parent">
    <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">
                <TextView
                        android:text="@string/name_exp"
                        android:textSize="16sp"
                        android:textColor="@color/colorText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minLines="2"
                        android:gravity="center_horizontal"/>
                <EditText
                        android:id="@+id/name_exp"
                        android:textSize="14sp"
                        android:hint="введите текст..."
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:layout_marginEnd="5dp"
                        android:background="@drawable/edittext_bg"/>
            </LinearLayout>

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">
                <TextView
                        android:text="@string/time_exp"
                        android:textSize="16sp"
                        android:textColor="@color/colorText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minLines="2"
                        android:gravity="center_horizontal"/>
                <EditText
                        android:id="@+id/time_exp"
                        android:textSize="14sp"
                        android:hint="введите текст..."
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:layout_marginStart="5dp"
                        android:background="@drawable/edittext_bg"/>

            </LinearLayout>


        </LinearLayout>

        <TextView
                android:text="@string/location_exp"
                android:textSize="16sp"
                android:textColor="@color/colorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"/>
        <EditText
                android:id="@+id/location_exp"
                android:textSize="14sp"
                android:hint="введите текст..."
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/edittext_bg"/>

        <TextView
                android:text="@string/participant_exp"
                android:textSize="16sp"
                android:textColor="@color/colorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"/>
        <EditText
                android:id="@+id/participant_exp"
                android:textSize="14sp"
                android:hint="введите текст..."
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="5dp"
                android:minLines="2"
                android:gravity="top"
                android:background="@drawable/edittext_bg"/>

        <TextView
                android:text="@string/description_exp"
                android:textSize="16sp"
                android:textColor="@color/colorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"/>
        <EditText
                android:id="@+id/description_exp"
                android:textSize="14sp"
                android:hint="введите текст..."
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="5dp"
                android:minLines="5"
                android:gravity="top"
                android:background="@drawable/edittext_bg"/>

        <TextView
                android:text="@string/title_rating_exp"
                android:textSize="16sp"
                android:textColor="@color/colorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center_horizontal"/>


        <SeekBar
                android:id="@+id/rating_exp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"

                android:max="20"
                android:progress="10"
                android:progressTint="@color/colorText"
                android:thumbTint="@color/colorText"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


            <TextView
                    android:id="@+id/rating_view"
                    android:textSize="20sp"
                    android:textColor="@color/colorText"
                    android:text="@string/rating"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:layout_height="wrap_content"/>
            <Button
                    android:id="@+id/ok"
                    android:textSize="16sp"
                    android:text="OK"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>